# ths-xgcl

./: .coverage  .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
config/: param_grid_example.yaml  parameters.yaml  parameters_calibrated.yaml
core/: compatibility.py  engine.py
docs/: INDEX.md  alert.md  architecture.md  backtest.md  calibration.md  logging.md  main_chart.md  optimizer.md  selection.md  sub_chart.md  testing.md
python/: __init__.py
python/backtest/: __init__.py  backtest_engine.py
python/engines/: __init__.py  breakout_engine.py  chip_engine.py  money_engine.py  risk_engine.py  score_engine.py  trend_engine.py  volume_engine.py
python/tools/: alert_monitor.py  backtest_runner.py  calibrator.py  generate_docs.py  logger.py  main_chart_validator.py  optimizer.py  report_generator.py  selection_exporter.py  sub_chart_validator.py  test_runner.py
tests/: test_alerts.py  test_backtest.py  test_calibrator.py  test_engines.py  test_integration.py  test_logger.py  test_main_chart.py  test_optimizer.py  test_selection.py  test_volume.py
tests/calib_out/: trials.csv
tests/opt_out/: best_params.yaml  trials.csv
tests/opt_out2/: best_params.yaml  trials.csv
tests/tmp/: BBB.csv
tests/tmp_calib/: AAA.csv
tests/tmp_opt/: BBB.csv
tests/tmp_out/: selection_results.csv  selection_results.xlsx
ths/: alert_formula.ths  main_chart_formula.ths  selection_formula.ths  sub_chart_formula.ths
